--- a/donatepage/donate.css
+++ b/donatepage/donate.css
@@ -1,5 +1,5 @@
 body{
-    background-color: yellow;
+    background-color: rgb(255, 255, 255);
 }
 
 .container{
@@ -8,6 +8,7 @@ body{
     grid-template-rows: 25rem 25rem 25rem; 
     justify-items: center;
     align-items: end;
+    flex-direction: row;
 }
 
 .donate--img{
@@ -15,8 +16,6 @@ body{
     
 }
 
-.donate--cta{
-    display: flex;
-    text-align: left;
-    justify-content: right;
-}
+/* .donate--cta{
+
+} */
