--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ a{
     text-decoration: none;
 }
  body{
-    background-image: url(background.jpg);
+    background-color:#012169 ;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
