--- a/getinvolved/get involved.css
+++ b/getinvolved/get involved.css
@@ -4,9 +4,7 @@
   margin: 0;
   padding: 0;
   font-family: "Oswald", sans-serif;
-  font-optical-sizing: auto;
-  font-weight: weight;
-  font-style: normal;
+  box-sizing: border-box;
 }
 html{
   font-size: 62.5%;
@@ -14,8 +12,8 @@ html{
 nav{
     display: flex;
     justify-content: space-around;
-    align-items: center;
-    height: 4vh;
+    align-items:center;
+    max-width: 120rem;
     background-color: lightblue;
 } 
 
@@ -27,21 +25,26 @@ li{
     height: 2rem;
 
 }
-.family-container{
-    height: 60vh;
-}
+
 .family{
     width: 100%;
-    height: 100%;
+    height: 30vh;
 
-
+    margin: 0 auto;
+}
+h1{
+  font-size: 4rem;
+  text-align: center;
 }
 
-.involved{
-
+.family-container p{
+  font-size: 4rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-/* button {
+ button {
   border-radius: 30px;
   background-color: black;
   height: 4rem;
@@ -56,14 +59,16 @@ li{
 .products {
   margin: 1rem;
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  grid-template-rows: repeat(2, 1fr);
-  grid-template-areas:
-    "p-one p-two p-three p-four"
-    "p-five p-six p-seven p-eight ";
-  grid-gap: 2rem;
-  font-size: 1.5rem;
-  margin: 3rem;
+      grid-template-areas: none;
+      grid-template-columns: 1fr ;
+      grid-template-rows: 1fr ;
+      grid-template-areas:
+      "p-one"
+      "p-two";
+      grid-gap: 3rem;
+      font-size: 1.5rem;
+      margin: 3rem;
+      
  
 }
 
@@ -78,6 +83,13 @@ a {
     width: 100%;
     object-fit: cover;
     border-radius: 10px;
+}
+h3{
+  font-size: 3rem;
+  text-align: center;
+}
+p{
+  font-size: 3rem;
 }
 
 #p-one {
@@ -115,47 +127,4 @@ a {
 
 
 
-
-
-
- @media (max-width: 89rem) {
-    html{
-        font-size:  56.25%;
-    }
-    .family{
-        height: 30%;
-    }
-
-}
-
-@media (max-width: 50rem){
-    html{
-        font-size: 43.75%;
-    }
-    .products{
-      grid-template-areas: none;
-      grid-template-columns: 1fr 1fr 1fr;
-      grid-template-rows: 1fr 1fr;
-    }
-}
-
-@media (max-width: 28rem){
-    html{
-        font-size: 31%;
-    }
-    .products{
-      grid-template-areas: none;
-      grid-template-columns: 1fr ;
-      grid-template-rows: 1fr ;
-    }
-    .logo{
-        height: 0;
-    }
-    nav{
-        font-size: 3rem;
-    }
-  
-
-}
  
-}
