--- a/style.css
+++ b/style.css
@@ -10,37 +10,58 @@ html{
   font-size: 62.5%;
 }
 
-nav{
+ul{
     display: flex;
     justify-content: space-around;
+    flex-direction: row;
     align-items: center;
-    height: 4vh;
-    background-color: lightblue;
+    height: 4rem;
+    gap: 2rem;
+   
+}
+li{
+    list-style: none;
+    border: 1px black solid;
+    height: 2rem;
+    width: 6rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: white;
+    border-radius: 10px;
+
 }
 
+
 .logo{
-    height: 2rem;
+    height: 4rem;
 }
 a{
     text-decoration: none;
+    text-align: center;
 }
  body{
-    background-color:#012169 ;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    
-    
+    min-height: 100vh;
+ }
+ h1{
+    color: black;
+    text-align: center;
+    font-size: 4rem
+   
  }
 .main-pic {
     border: solid black 1;
      width: 100%;
+     height: 30rem;
+     margin-top: 1.5rem;
 
 }
 .stories{
     width: 100%;
     height: 5rem;
-    background-color: lightcoral;
     text-align: center;
     display: flex;
     justify-content: space-around;
@@ -56,7 +77,7 @@ h3{
 .grid-main{
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-   grid-gap: 3rem;
+    grid-template-rows: repeat(4, 1fr);
    padding: 0px 2rem;
 }
 
@@ -70,7 +91,7 @@ h3{
     margin-bottom: 1rem;
     
 }
-#p-one {
+#g-one {
   padding: 1rem;
   border: 1px black solid;
   background-color: white;
@@ -80,7 +101,7 @@ h3{
 
 }
 
-#p-two {
+#g-two {
   padding: 1rem;
   border: 1px black solid;
   background-color: white;
@@ -89,8 +110,84 @@ h3{
   height: rem;
 }
 
+#g-three {
+  padding: 1rem;
+  border: 1px black solid;
+  background-color: white;
+  border-radius: 10px;
+  width: 10rem;
+  height: rem;
+  margin-left: 8rem;
+
+}
+
+#g-four {
+  padding: 1rem;
+  border: 1px black solid;
+  background-color: white;
+  border-radius: 10px;
+  width: 10rem;
+  height: rem;
+  margin-left: 6rem;
+}
+
+.donate{
+    height: 10vh;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    margin-top: 5rem;
+
+}
+
+button{
+    height: 7rem;
+    width: 30rem;
+    font-size: 5rem;
+
+}
+
 footer{
     display: flex;
     align-items: end;
     justify-content: flex-end;
+    height: 3rem;
+    
+}
+
+
+ @media (max-width: 72rem) {
+    html{
+        font-size:  56.25%;
+    }
+
+}
+
+@media (max-width: 50rem){
+    html{
+        font-size: 43.75%;
+    }
+    .products{
+      grid-template-areas: none;
+      grid-template-columns: 1fr 1fr 1fr;
+      grid-template-rows: 1fr 1fr;
+    }
+}
+
+@media (max-width: 30rem){
+    html{
+        font-size: 31%;
+    }
+    .products{
+      grid-template-areas: none;
+      grid-template-columns: 1fr 1fr;
+      grid-template-rows: 1fr 1fr;
+    }
+      button{
+    height: 4rem;
+    width: 10em;
+     font-size: 1.5rem;
+
 }
