--- a/style.css
+++ b/style.css
@@ -3,49 +3,85 @@
   padding: 0;
   font-family: "Oswald", sans-serif;
   font-optical-sizing: auto;
-  font-weight: weight;
+  font-weight: 400;
   font-style: normal;
+  box-sizing: border-box;
 }
 html{
   font-size: 62.5%;
-}
-
-ul{
-    display: flex;
-    justify-content: space-around;
-    flex-direction: row;
-    align-items: center;
-    height: 4rem;
-    gap: 2rem;
-   
-}
-li{
-    list-style: none;
-    border: 1px black solid;
-    height: 2rem;
-    width: 6rem;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: white;
-    border-radius: 10px;
-
-}
-
-
-.logo{
-    height: 4rem;
-}
-a{
-    text-decoration: none;
-    text-align: center;
 }
  body{
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     min-height: 100vh;
+    background-color: #f5f5f5;
  }
+ 
+ header{ 
+    background-color: white;
+    box-shadow: 0 2px 5px black;
+    padding: 1rem 0;
+
+}
+ul{
+    display: flex;
+    justify-content: space-around;
+    flex-direction: row;
+    align-items: center;
+    height: 6rem;
+    gap: 2rem;
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 0 2rem;
+}
+
+
+li{
+    list-style: none;
+    border: 2px black solid;
+    height: 4rem;
+    width: 12rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: white;
+    border-radius: 10px;
+    transition: all 0.4s ease-in-out, transform 0.4s ease-in-out;
+
+}
+
+li:hover {
+    background-color: black;
+    color: white;
+    transform: scale(1.4);
+}
+
+a{
+    text-decoration: none;
+    text-align: center;
+    font-size: 1.4rem;
+    color: black;
+    transition: color 0s ease-in-out ;
+}
+
+li:hover a{
+    color: white;
+}
+
+
+.logo{
+    height: 4rem;
+    width: auto;
+}
+
+main{
+    max-width: 1200px;
+    width: 100%;
+    margin: 0 auto;
+    padding: 0 2rem;
+}
+
  h1{
     color: black;
     text-align: center;
@@ -77,7 +113,7 @@ h3{
 .grid-main{
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(4, 1fr);
+    grid-template-rows: repeat( 1fr);
    padding: 0px 2rem;
 }
 
@@ -96,8 +132,8 @@ h3{
   border: 1px black solid;
   background-color: white;
   border-radius: 7px;
-  width: 10rem;
-  height: 20rem;
+  width: 15rem;
+
 
 }
 
@@ -106,7 +142,7 @@ h3{
   border: 1px black solid;
   background-color: white;
   border-radius: 10px;
-  width: 10rem;
+  width: 15rem;
   height: rem;
 }
 
@@ -115,8 +151,8 @@ h3{
   border: 1px black solid;
   background-color: white;
   border-radius: 10px;
-  width: 10rem;
-  height: rem;
+  width: 15rem;
+ 
   margin-left: 8rem;
 
 }
@@ -126,11 +162,16 @@ h3{
   border: 1px black solid;
   background-color: white;
   border-radius: 10px;
-  width: 10rem;
-  height: rem;
+  width: 15rem;
   margin-left: 6rem;
 }
 
+h5{
+    font-size: 1.3rem;
+}
+p{
+    font-size: 2rem;
+}
 .donate{
     height: 10vh;
     width: 100%;
@@ -152,8 +193,9 @@ button{
 footer{
     display: flex;
     align-items: end;
-    justify-content: flex-end;
+    justify-content: center;
     height: 3rem;
+    font-size: 2rem;
     
 }
 
@@ -189,5 +231,4 @@ footer{
     height: 4rem;
     width: 10em;
      font-size: 1.5rem;
-
-}
+      }
