--- a/donatepage/donate.css
+++ b/donatepage/donate.css
@@ -1,5 +1,60 @@
-body{
-    background-color: rgb(255, 255, 255);
+* {
+  margin: 0;
+  padding: 0;
+  font-family: "Oswald", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+  box-sizing: border-box;
+}
+html{
+  font-size: 62.5%;
+}
+
+ header{
+    background-color: white;
+    box-shadow: 0 2px 5px black;
+    padding: 1rem 0;
+}
+
+.ul-navbar{
+    display: flex;
+    justify-content: space-around;
+    flex-direction: row;
+    align-items: center;
+    height: 6rem;
+    gap: 2rem;
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 0 2rem;
+}
+
+.li--navbar{
+    list-style: none;
+    border: 2px black solid;
+    height: 4rem;
+    width: 12rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: white;
+    border-radius: 10px;
+    transition: all 0.4s ease-in-out, transform 0.4s ease-in-out;
+}
+.li--navbar:hover {
+    background-color: black;
+    color: white;
+    transform: scale(1.4);
+}
+a{
+    text-decoration: none;
+    text-align: center;
+    font-size: 1.4rem;
+    color: black;
+    transition: color 0s ease-in-out ;
+}
+li:hover a{
+    color: white;
 }
 
 .container{
@@ -36,4 +91,13 @@ body{
 
 ul{
     list-style: none;
+}
+
+.logo{
+    height: 4rem;
+    width: auto;
+    transition: transform 0.5s ease-in-out;
+}
+.logo:hover {
+    transform: scale(1.6) rotate(360deg);
 }
