--- a/getinvolved/get involved.css
+++ b/getinvolved/get involved.css
@@ -1,36 +1,98 @@
-
-
 * {
   margin: 0;
   padding: 0;
   font-family: "Oswald", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
   box-sizing: border-box;
 }
 html{
   font-size: 62.5%;
 }
-nav{
+ body{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    min-height: 100vh;
+    background-color: #f5f5f5;
+ }
+ 
+ header{ 
+    background-color: white;
+    box-shadow: 0 2px 5px black;
+    padding: 1rem 0;
+
+}
+ul{
     display: flex;
     justify-content: space-around;
-    align-items:center;
-    max-width: 120rem;
-    background-color: lightblue;
-} 
+    flex-direction: row;
+    align-items: center;
+    height: 6rem;
+    gap: 2rem;
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 0 2rem;
+}
+
 
 li{
     list-style: none;
+    border: 2px black solid;
+    height: 4rem;
+    width: 12rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: white;
+    border-radius: 10px;
+    transition: all 0.4s ease-in-out, transform 0.4s ease-in-out;
+
 }
+
+li:hover {
+    background-color: black;
+    color: white;
+    transform: scale(1.4);
+}
+
+a{
+    text-decoration: none;
+    text-align: center;
+    font-size: 1.4rem;
+    color: black;
+    transition: color 0s ease-in-out ;
+}
+
+li:hover a{
+    color: white;
+}
+
 
 .logo{
-    height: 2rem;
-
+    height: 4rem;
+    width: auto;
+    transition: transform 0.5s ease-in-out;
 }
 
-.family{
-    width: 100%;
-    height: 30vh;
+.logo:hover {
+    transform: scale(1.6) rotate(360deg);
+}
 
-    margin: 0 auto;
+
+.family{
+     border: solid black ;
+     width: 100%;
+     height: 40rem;
+     margin: 2rem 0;
+     object-fit: cover;
+     border-radius: 10px;
+}
+main{
+  max-width: 1200px;
+  margin: 0 auto;
+
 }
 h1{
   font-size: 4rem;
