--- a/style.css
+++ b/style.css
@@ -73,6 +73,11 @@ li:hover a{
 .logo{
     height: 4rem;
     width: auto;
+    transition: transform 0.5s ease-in-out;
+}
+
+.logo:hover {
+    transform: scale(1.6) rotate(360deg);
 }
 
 main{
@@ -85,150 +90,122 @@ main{
  h1{
     color: black;
     text-align: center;
-    font-size: 4rem
+    font-size: 5rem;
+    margin: 3rem 0;
+    font-weight: bold;
    
  }
+
 .main-pic {
-    border: solid black 1;
+    border: solid black ;
      width: 100%;
-     height: 30rem;
-     margin-top: 1.5rem;
+     height: 40rem;
+     margin: 2rem 0;
+     object-fit: cover;
+     border-radius: 10px;
 
 }
-.stories{
+.goals{
     width: 100%;
-    height: 5rem;
+    height: 8rem;
     text-align: center;
     display: flex;
     justify-content: space-around;
+    margin: 4rem 0;
+    background-color: white;
+    border-radius: 10px;
+    box-shadow: 1px 2px 10px 2px;
     
 }
 h3{
-    padding-top: 1.2rem;
-    font-size: 2rem;
+    padding-top: 2rem;
+    font-size: 2.7rem;
+    font-weight: 500;
 }
    
 
 
 .grid-main{
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat( 1fr);
-   padding: 0px 2rem;
-}
-
-.grid-pic{
-    width: 100%;
-    height: 100%;
-    object-fit:cover
-}
-.container-pic {
-    height: 8rem;
-    margin-bottom: 1rem;
-    
-}
-#g-one {
-  padding: 1rem;
-  border: 1px black solid;
-  background-color: white;
-  border-radius: 7px;
-  width: 15rem;
-
+    grid-template-columns: repeat(2, 1fr);
+    padding: 4rem 0;
+    grid-gap: 3rem;
+    margin: 4rem 0;
 
 }
 
-#g-two {
-  padding: 1rem;
-  border: 1px black solid;
+
+.grid-container{
+  padding: 2rem;
+  border: 2px black solid;
   background-color: white;
   border-radius: 10px;
-  width: 15rem;
-  height: rem;
+  height: auto;
+  min-height: 25rem;
+  box-shadow: 1px 1px 10px 2px ;
+  transition: transform 0.8s ease-in-out, box-shawdow 1s ease-in-out;
 }
 
-#g-three {
-  padding: 1rem;
-  border: 1px black solid;
-  background-color: white;
-  border-radius: 10px;
-  width: 15rem;
- 
-  margin-left: 8rem;
-
-}
-
-#g-four {
-  padding: 1rem;
-  border: 1px black solid;
-  background-color: white;
-  border-radius: 10px;
-  width: 15rem;
-  margin-left: 6rem;
+.grid-container:hover{
+    transform: scale(1.05);
+    box-shadow: 1px 3px 7px 5px red;
 }
 
 h5{
-    font-size: 1.3rem;
+    font-size: 1.8rem;
+    margin-bottom: 1.5rem;
+    font-weight: bold;
 }
 p{
-    font-size: 2rem;
+    font-size: 1.5rem;
+    color: darkslategrey;
 }
 .donate{
-    height: 10vh;
+    height: 15rem;
     width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
-
-    margin-top: 5rem;
+    margin-top: 5rem 0;
 
 }
 
 button{
-    height: 7rem;
-    width: 30rem;
-    font-size: 5rem;
+    height: 8rem;
+    width: 25rem;
+    background-color: red;
+    border-radius: 10px;
+    /* border: none; */
+    transition: transform 1s ease-in-out;
+    cursor: pointer;
 
 }
+
+button:hover {
+    transform: rotate(360deg) scale(1.3);
+    
+}
+button a{
+    font-size: 3rem;
+    font-weight: bold;
+    background-color: red;
+    color: white;
+}
+
+
 
 footer{
     display: flex;
-    align-items: end;
+    align-items: center;
     justify-content: center;
-    height: 3rem;
-    font-size: 2rem;
+    height: 6rem;
+    background-color: #333;
+    margin-top: auto;
     
 }
 
-
- @media (max-width: 72rem) {
-    html{
-        font-size:  56.25%;
-    }
-
+footer p{
+    color: white;
+    font-size: 1.5rem;
+    
 }
-
-@media (max-width: 50rem){
-    html{
-        font-size: 43.75%;
-    }
-    .products{
-      grid-template-areas: none;
-      grid-template-columns: 1fr 1fr 1fr;
-      grid-template-rows: 1fr 1fr;
-    }
-}
-
-@media (max-width: 30rem){
-    html{
-        font-size: 31%;
-    }
-    .products{
-      grid-template-areas: none;
-      grid-template-columns: 1fr 1fr;
-      grid-template-rows: 1fr 1fr;
-    }
-      button{
-    height: 4rem;
-    width: 10em;
-     font-size: 1.5rem;
-      }
