--- a/getinvolved/get involved.css
+++ b/getinvolved/get involved.css
@@ -214,3 +214,83 @@ footer p{
     color: white;
     font-size: 1.5rem;
 }
+
+@media (max-width: 830px){
+
+    html{
+        font-size: 50%;
+    }
+    .involved{
+  padding: 0 3rem;
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  flex-direction: column;
+  margin: 2rem;
+    }
+   .services {
+  display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    padding: 4rem 0;
+    grid-gap: 3rem;
+    margin: 4rem 0;
+}
+}
+
+@media (max-width: 670px){
+
+    html{
+        font-size: 44%;
+    }
+    .involved{
+  padding: 0 3rem;
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  flex-direction: column;
+  margin: 2rem;
+    }
+   .services {
+  display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    padding: 4rem 0;
+    grid-gap: 3rem;
+    margin: 4rem 0;
+}
+}
+
+@media (max-width: 480px){
+    html{
+        font-size: 43.75;
+    }
+
+    .involved{
+      flex-direction: column-reverse;
+    }
+    .involved p{
+      font-size: 2rem;
+      order: -1;
+    }
+
+
+    header{
+      height: 23rem;
+    }
+    .family{
+      display: none;
+    }
+
+   .services {
+  display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    padding: 4rem 0;
+    grid-gap: 3rem;
+    margin: 4rem 0;
+}
+ul{
+    display: flex;
+    justify-content: space-around;
+    flex-direction: column;
+    align-items: center;
+}
+}
