--- a/our_team.css
+++ b/our_team.css
@@ -22,7 +22,7 @@ html{
     box-shadow: 0 2px 5px black;
     padding: 1rem 0;
 }
-ul{
+.navbar{
     display: flex;
     justify-content: space-around;
     flex-direction: row;
@@ -33,7 +33,7 @@ ul{
     margin: 0 auto;
     padding: 0 2rem;
 }
-li{
+.page{
     list-style: none;
     border: 2px black solid;
     height: 4rem;
@@ -45,7 +45,7 @@ li{
     border-radius: 10px;
     transition: all 0.4s ease-in-out, transform 0.4s ease-in-out;
 }
-li:hover {
+.page:hover {
     background-color: black;
     color: white;
     transform: scale(1.4);
@@ -110,15 +110,23 @@ display: flex;
 justify-content: center;
 align-items: center;
 }
-.card .imgbx .imgbx img{
-    width: 100%;
+/*.card .imgbx .imgbx img{
+    width: 200px;
     height: auto;
-    object-fit: c;
+    object-fit: cover;
 }
 .img{
     width: 100%;
-    height: 100%;
-    object-fit: contain;
+    height: auto;
+    object-fit: cover;
+    
+   
+}*/
+.fit{
+   width: 300px; 
+   height: 390px;
+   object-fit: cover;
+   object-position: center;
 }
 .card .content{
     position:absolute;
@@ -126,9 +134,13 @@ align-items: center;
     width: 100%;
     height: 160px;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    /*justify-content: center;
+    align-items: center;*/
     flex-direction: column;
+    flex-wrap: wrap;
+    align-content: center;
+    justify-content: space-around;
+    align-items: center;
     backdrop-filter: blur(15px);
     box-shadow: 0 -10px 10px;
     border: 1px solid;
@@ -144,37 +156,86 @@ align-items: center;
     letter-spacing: 2px;
     font-weight: 500;
     color: #ccc;
-    text-align: center;
+   text-align: center; 
+
+}
+.content .links{
+    position: relative;
+    bottom:10px;
+    display: flex;
+}
+.content .links li{
+    list-style-type: none;
+    /*display: inline; next 2 lines not sure?*/
+    /*display: flex;*/
+    justify-content: center;
     
 }
+/*.content .links li a{
+    display: flex;
+    justify-content: center;
+    background-color:; 
+    
+}*/
+.content .links li a img{
+    width: 50px;
+    height: 50x; 
+    display: flex;  
+}
 .bio_container{
-    max-width: 1000px;
-    margin: 0 auto;
-    padding: 20px;
+    max-width: 100%/*1000vh;*/
+    margin: 0 auto; 
+    background-image: linear-gradient(45deg,grey, lightgray, white);  
 }
 .bio{
     display: flex;
     align-items: flex-start;
     gap: 20px;
     margin-bottom: 40px;
+    border-top-style:groove;
+    border-color: gray;
+    border-width: 1px; 
+  
 }
 .bio_pic{
     width: 200px;
     height: auto;
     border-radius: 8px;
     object-fit: cover;
+    box-shadow: 0 2px 6px lightgray; 
+    position: relative;
+    top: 30px;
+}
+.Alexander{
+    position: relative;
+    top: 53px;
+}
+.Jhoana{
+    position: relative;
+    top: 69px;
 }
 .bio_text{
-    flex: 1;
+   text-align:center;
+    font-size: small;  
+    max-width: 550px;
+    
 }
 .bio h1{
     margin-top: 0;
+     display: inline-block;
+    padding: 20px;
+    color: black;
+    font-size: 25px;
+    font-weight: 200px;
+    text-shadow: 1px 1px 2px rgb(170, 44, 101); 
 }
 .bio_description{
     line-height: 1.6;
+    font-size: 15px;
+    font-style: italic;    
 }
 .bio:nth-child(even){
     flex-direction:row-reverse;
-    text-align:right;
-    background-color: aquamarine;
-}
+    text-align:center;
+
+} 
