--- a/our_team.css
+++ b/our_team.css
@@ -10,11 +10,11 @@
 html{
   font-size: 62.5%;
 }
- .nav{
+ body{
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    /*min-height: 100vh;*/
+    min-height: 100vh;
     background-color: #F5F5F5;
  }
  header{
@@ -22,7 +22,7 @@ html{
     box-shadow: 0 2px 5px black;
     padding: 1rem 0;
 }
-.navbar{
+ul{
     display: flex;
     justify-content: space-around;
     flex-direction: row;
@@ -32,6 +32,41 @@ html{
     max-width: 1200px;
     margin: 0 auto;
     padding: 0 2rem;
+}
+.page{
+    list-style: none;
+    border: 2px black solid;
+    height: 4rem;
+    width: 12rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: white;
+    border-radius: 10px;
+    transition: all 0.4s ease-in-out, transform 0.4s ease-in-out;
+}
+li:hover {
+    background-color: black;
+    color: white;
+    transform: scale(1.4);
+}
+a{
+    text-decoration: none;
+    text-align: center;
+    font-size: 1.4rem;
+    color: black;
+    transition: color 0s ease-in-out ;
+}
+li:hover a{
+    color: white;
+}
+.logo{
+    height: 4rem;
+    width: auto;
+    transition: transform 0.5s ease-in-out;
+}
+.logo:hover {
+    transform: scale(1.6) rotate(360deg);
 }
 .page{
     list-style: none;
@@ -69,7 +104,7 @@ li:hover a{
     transform: scale(1.6) rotate(360deg);
 }
 
-body{
+main{
     
     justify-content: center;
     align-items: center;
@@ -83,9 +118,9 @@ body{
 }
 .title h3{ 
     display: inline-block;
-    padding: 20px;
+    padding: 2rem;
     color: black;
-    font-size: 50px;
+    font-size: 5rem;
     font-weight: 500;
     text-shadow: 1px 1px 2px rgb(170, 44, 101); 
     
@@ -96,13 +131,13 @@ body{
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
-    margin: 40px 0;
+    margin: 4rem 0;
 }
 .card_container .card{
 position: relative;
-width: 300px;
-height: 400px;
-margin: 20px;
+width: 30rem;
+height: 40rem;
+margin: 2rem;
 overflow: hidden;
 box-shadow: 0 30px 30px -20px;
 border-radius: 15px;
@@ -110,32 +145,19 @@ display: flex;
 justify-content: center;
 align-items: center;
 }
-/*.card .imgbx .imgbx img{
-    width: 200px;
-    height: auto;
-    object-fit: cover;
-}
-.img{
-    width: 100%;
-    height: auto;
-    object-fit: cover;
-    
-   
-}*/
+
 .fit{
-   width: 300px; 
-   height: 390px;
+   width: 30rem; 
+   height: 39rem;
    object-fit: cover;
    object-position: center;
 }
 .card .content{
     position:absolute;
-    bottom: -160px;
+    bottom: -16rem;
     width: 100%;
-    height: 160px;
+    height: 16rem;
     display: flex;
-    /*justify-content: center;
-    align-items: center;*/
     flex-direction: column;
     flex-wrap: wrap;
     align-content: center;
@@ -161,50 +183,47 @@ align-items: center;
 }
 .content .links{
     position: relative;
-    bottom:10px;
+    bottom:1rem;
     display: flex;
 }
 .content .links li{
     list-style-type: none;
-    /*display: inline; next 2 lines not sure?*/
-    /*display: flex;*/
     justify-content: center;
     
 }
-/*.content .links li a{
-    display: flex;
-    justify-content: center;
-    background-color:; 
-    
-}*/
+
 .content .links li a img{
-    width: 50px;
-    height: 50x; 
+    width: 5rem;
+    height: 5rem; 
     display: flex;  
 }
 .bio_container{
-    max-width: 100%/*1000vh;*/
+    max-width: 100%;
     margin: 0 auto; 
     background-image: linear-gradient(45deg,grey, lightgray, white);  
 }
 .bio{
     display: flex;
     align-items: flex-start;
-    gap: 20px;
-    margin-bottom: 40px;
+    gap: 2rem;
+    margin-bottom: 0;
     border-top-style:groove;
     border-color: gray;
     border-width: 1px; 
   
 }
 .bio_pic{
-    width: 200px;
+    width: 20rem;
     height: auto;
     border-radius: 8px;
     object-fit: cover;
     box-shadow: 0 2px 6px lightgray; 
     position: relative;
     top: 30px;
+}
+.Michael {
+    position: relative;
+    top: 70px;
 }
 .Alexander{
     position: relative;
@@ -237,5 +256,40 @@ align-items: center;
 .bio:nth-child(even){
     flex-direction:row-reverse;
     text-align:center;
-
+}
+footer{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 6rem;
+    background-color: #333;
+    margin-top: auto;
+}
+footer p{
+    color: white;
+    font-size: 1.5rem;
 } 
+@media (max-width: 690px){
+    html{
+        font-size: 44%;
+    }
+
+}
+@media (max-width: 480px){
+    html{
+        font-size: 43.75;
+    }
+    
+    header{
+      height: 23rem;
+    }
+    
+ul{
+    display: flex;
+    justify-content: space-around;
+    flex-direction: column;
+    align-items: center;
+}
+}
+    
+
