--- a/donatepage/donate.css
+++ b/donatepage/donate.css
@@ -1,14 +1,15 @@
 * {
-  margin: 0;
-  padding: 0;
-  font-family: "Oswald", sans-serif;
-  font-optical-sizing: auto;
-  font-weight: 400;
-  font-style: normal;
-  box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    font-family: "Oswald", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
+    box-sizing: border-box;
 }
 html{
-  font-size: 62.5%;
+    font-size: 62.5%;
+    font-family: raleway;
 }
 
 header{
@@ -57,16 +58,7 @@ li:hover a{
     color: white;
 }
 
-button{
-    height: 8rem;
-    width: 25rem;
-    background-color: red;
-    border-radius: 10px;
-    transition: transform 1s ease-in-out, box-shawdow 1s ease-in-out;
-    cursor: pointer;
-    margin: 4rem 0;
-    align-self: center;
-}
+
 
 footer{
     display: flex;
@@ -77,45 +69,74 @@ footer{
     margin-top: auto;
 }
 .donate-here{
-    background-color: rgba(221, 229, 229,0.5);
+    background-color: rgba(221, 229, 229, 0.5);
     grid-area: header;
     text-align: center;
-    align-items: center;
+    border: solid rgb(238, 13, 13) 1px;
+    max-height: 100%;
+    background-repeat: no-repeat;
+    align-self: center;
 }
 
 .container{
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-template-rows: repeat(4,1fr); 
-    grid-template-areas:"header header header header"
-                        "side side main main"
-                        ". . form form"
-                        "footer footer footer footer";
+    padding: 10px;
+    margin:25px;
+    gap: 1rem 1rem;
+    grid-template-columns: 1fr .5fr .5fr;
+    grid-template-rows: 17rem 28rem  10rem; 
+    grid-template-areas:"header header header"
+                        "main img imgtwo"
+                        ". . .";
+    border: solid black 1rem;
+    font-size: 2.1rem;
 }
 
+
 .img--donate{
-    grid-row: 2/ 3;
-    grid-column: 1/2; /*Come back to this trying to fit the image within a 4 block area*/
-    width: 100%;
+    grid-area: img;
+    object-fit: contain;
     max-height: 100%;
+    border: black solid 1px;
+    box-shadow: 20px 8px 20px 10px;
+}
+.img--donate-below{
+    grid-area: imgtwo;
+    object-fit: contain;
+    max-height: 100%;
+    border: black solid 1px;
+    box-shadow: 20px 8px 20px 10px;
 }
 
 .donate--cta{
+    text-align: center;
     grid-area: main;
-    background-color: beige;
+    background-color: rgb(255, 255, 255);
+    border: solid rgb(0, 0, 0) 1px;
 }
 
-.donate--footer{
-    grid-area: footer;
-    background-color: black;
+#error{
+    color: red;
 }
+
 
 .donate--button{
     border-radius: 5rem;
     /* height: 3rem; */
-    width: 100%;
-    grid-area: form;
+    height: 3rem;
+    width: 12rem;
+    background-color: rgb(255, 255, 255);
+    border-radius: 10px;
+    transition: transform 1s ease-in-out, box-shawdow 1s ease-in-out;
+    cursor: pointer;
+    margin: 4rem 0;
+    align-self: center;
 }
+button:hover {
+    transform: scale(1.1);
+    box-shadow: 2px 2px 10px 3px ;
+}
+
 
 ul{
     list-style: none;
@@ -126,6 +147,7 @@ ul{
     width: auto;
     transition: transform 0.5s ease-in-out;
 }
+
 .logo:hover {
     transform: scale(1.6) rotate(360deg);
 }
