--- a/getinvolved/get involved.css
+++ b/getinvolved/get involved.css
@@ -15,7 +15,7 @@ html{
     flex-direction: column;
     justify-content: space-between;
     min-height: 100vh;
-    background-color: #f5f5f5;
+    background-color: #e0f7fa;
  }
  
  header{ 
@@ -237,7 +237,7 @@ footer p{
 }
 }
 
-@media (max-width: 670px){
+@media (max-width: 690px){
 
     html{
         font-size: 44%;
@@ -268,7 +268,7 @@ footer p{
       flex-direction: column-reverse;
     }
     .involved p{
-      font-size: 2rem;
+      font-size: 3rem;
       order: -1;
     }
 
@@ -292,5 +292,17 @@ ul{
     justify-content: space-around;
     flex-direction: column;
     align-items: center;
+}
+.events h3{
+  font-size: 4rem;
+  font-weight: bold;
+  margin: 1rem 0;
+
+}
+
+.events p{
+  font-size: 2.5rem;
+  color: #333;
+
 }
 }
