--- a/aboutus/aboutus.css
+++ b/aboutus/aboutus.css
@@ -7,26 +7,28 @@
   font-style: normal;
   box-sizing: border-box;
 }
-
-html {
+html{
   font-size: 62.5%;
 }
-
-body {
+main {
+    max-width: 1200px;
+    width: 100%;
+    margin: 0 auto;
+    padding: 0 2rem;
+}
+ body{
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    justify-content: space-between;
     min-height: 100vh;
     background-color: #F5F5F5;
-}
-
-header {
+ }
+ header{
     background-color: white;
     box-shadow: 0 2px 5px black;
     padding: 1rem 0;
 }
-
-ul {
+.nav {
     display: flex;
     justify-content: space-around;
     flex-direction: row;
@@ -37,8 +39,7 @@ ul {
     margin: 0 auto;
     padding: 0 2rem;
 }
-
-li {
+.nav_list {
     list-style: none;
     border: 2px black solid;
     height: 4rem;
@@ -50,65 +51,152 @@ li {
     border-radius: 10px;
     transition: all 0.4s ease-in-out, transform 0.4s ease-in-out;
 }
-
 li:hover {
     background-color: black;
     color: white;
     transform: scale(1.4);
 }
-
-a {
+a{
     text-decoration: none;
     text-align: center;
     font-size: 1.4rem;
     color: black;
     transition: color 0s ease-in-out ;
 }
-
-li:hover a {
+li:hover a{
     color: white;
+}
+.logo{
+    height: 4rem;
+    width: auto;
+    transition: transform 0.5s ease-in-out;
+}
+.logo:hover {
+    transform: scale(1.6) rotate(360deg);
 }
 
 .h1_aboutus--heading {
+    justify-items: center;
+    border-radius: 4px;
+    background-color: white;
+    padding: 4rem;
+    margin-top: 2.5rem;
+    margin-left: 10rem;
+    margin-right: 10rem;
+    box-shadow: 5px 5px 10px black;
+}
+
+.doc_img {
     display: flex;
+    width: 15rem;
+    height: 15rem;
+    justify-self: center;
+}
+
+.health_img{
+    display: flex;
+    width: 15rem;
+    height: 15rem;
+    justify-self: center;
+}
+
+.h2_mission {
+    justify-items: center;
+    border-radius: 4px;
+    background-color: white;
+    margin-bottom: 0rem;
+    margin-right: 10rem;
+    margin-left: 10rem;
+    margin-top: 5rem;
+    padding: 1rem;
+    box-shadow: 5px 5px 10px black;
+
+}
+
+.h3_why { 
+    justify-items: center;
     text-align: center;
+    border-radius: 4px;
+    background-color: white;
+    padding: 1rem;
+    /* margin-left: 30rem;
+    margin-right: 30rem; */
+    margin-top: 1rem;
+    border: solid 2px black;
+    margin-bottom: 1rem;
+    box-shadow: 5px 2px 10px black;
+}
+.h3_why--heading {
+    justify-self: center;
+}
+
+.h3_help {
+    font-size: large;
+    display: flex;
+    justify-items: center;
+    border-radius: 4px;
+    padding: 1rem;
+    margin-right: 30rem;
+    margin-left: 30rem;
+    margin-bottom: 2rem;
+    background-color: white;
+    border: solid 2px black;
+    box-shadow: 5px 2px 10px black;
+}
+
+.h3_help--heading {
     justify-content: center;
-    flex-direction: column;
-    margin: 1rem;
-    height: 1rem;
 }
 
-.grouped_content {
+.donate_button {
+    background-color: orangered;
+    border-radius: 8px;
+    margin-bottom: 0rem;
+    margin-right: 0rem;
+    margin-left: 11rem;
+    padding: 1.8rem;
+}
+
+footer{
     display: flex;
-    flex-direction: column;
-} 
+    align-items: center;
+    justify-content: center;
+    height: 6rem;
+    background-color: #333;
+    margin-top: auto;
+}
+footer p{
+    color: white;
+    font-size: 1.5rem;
+}
 
-.main_content {
+@media (max-width: 690px){
+    html{
+        font-size: 44%;
+    }
+}
+@media (max-width: 480px){
+    html{
+        font-size: 43.75;
+    }
+
+    }
+    header{
+      height: 23rem;
+    }
+
+.nav{
     display: flex;
+    justify-content: space-around;
     flex-direction: column;
-    margin: 1rem;
+    align-items: center;
 }
-
-#h2_mission {
-    text-align: left;
-    margin: 1rem;
-    height: 1rem;
+.h3_why { 
+    margin-left: 9rem;
+    margin-right: 9rem;
 }
-
-#h3_why {
-    text-align: right;
-    margin: 1rem;
-    height: 1rem;
+.h3_help {
+    margin-right: 5rem;
+    margin-left: 5rem;
 }
-
-#h3_help {
-    text-align: right;
-    margin: 1rem;
-    height: 1rem;
-}
-
-#h3_plan {
-    text-align: left;
-    margin: 1rem;
-    height: 1rem;
 }
