--- a/our_team.css
+++ b/our_team.css
@@ -281,7 +281,7 @@ footer p{
       height: 23rem;
     }
     
-ul{
+.navbar{
     display: flex;
     justify-content: space-around;
     flex-direction: column;
