--- a/aboutus/aboutus.css
+++ b/aboutus/aboutus.css
@@ -77,84 +77,89 @@ li:hover a{
 
 .h1_aboutus--heading {
     justify-items: center;
+    font-size: 2rem;
+    text-align: center;
     border-radius: 4px;
     background-color: white;
     padding: 4rem;
     margin-top: 2.5rem;
-    margin-left: 10rem;
-    margin-right: 10rem;
-    box-shadow: 5px 5px 10px black;
+    margin-left: 8rem;
+    margin-right: 8rem;
+    box-shadow: 5px 5px 10px grey;
 }
-
+.h1_aboutus--heading p {
+    font-size: 1.8rem;
+}
 .doc_img {
     display: flex;
-    width: 15rem;
-    height: 15rem;
+    width: 25rem;
+    height: 25rem;
     justify-self: center;
 }
 
 .health_img{
     display: flex;
-    width: 15rem;
-    height: 15rem;
+    width: 20rem;
+    height: 20rem;
     justify-self: center;
 }
 
 .h2_mission {
     justify-items: center;
     border-radius: 4px;
+    text-align: center;
+    font-size: 2rem;
     background-color: white;
-    margin-bottom: 0rem;
-    margin-right: 10rem;
-    margin-left: 10rem;
-    margin-top: 5rem;
+    margin-right: 8rem;
+    margin-left: 8rem;
+    margin-top: 2.5rem;
     padding: 1rem;
-    box-shadow: 5px 5px 10px black;
+    box-shadow: 5px 5px 10px grey;
+}
+.h2_mission p {
+font-size: 2rem;
 
 }
 
 .h3_why { 
     justify-items: center;
-    text-align: center;
     border-radius: 4px;
+    text-align: center;
+    font-size: 2rem;
     background-color: white;
+    margin-right: 8rem;
+    margin-left: 8rem;
+    margin-top: 2.5rem;
     padding: 1rem;
-    /* margin-left: 30rem;
-    margin-right: 30rem; */
-    margin-top: 1rem;
-    border: solid 2px black;
-    margin-bottom: 1rem;
-    box-shadow: 5px 2px 10px black;
+    box-shadow: 5px 5px 10px grey;
 }
 .h3_why--heading {
     justify-self: center;
+    text-align: center;
+    font-size: 2rem;
 }
 
 .h3_help {
-    font-size: large;
-    display: flex;
     justify-items: center;
     border-radius: 4px;
-    padding: 1rem;
+    text-align: center;
+    font-size: 2rem;
+    background-color: white;
     margin-right: 30rem;
     margin-left: 30rem;
+    margin-top: 2.5rem;
     margin-bottom: 2rem;
-    background-color: white;
-    border: solid 2px black;
-    box-shadow: 5px 2px 10px black;
-}
-
-.h3_help--heading {
-    justify-content: center;
+    padding: 1rem;
+    box-shadow: 5px 5px 10px grey;
 }
 
 .donate_button {
     background-color: orangered;
     border-radius: 8px;
-    margin-bottom: 0rem;
+    margin-top: 2rem;
     margin-right: 0rem;
-    margin-left: 11rem;
-    padding: 1.8rem;
+    margin-left: 0rem;
+    padding: 2.5rem;
 }
 
 footer{
@@ -180,23 +185,46 @@ footer p{
         font-size: 43.75;
     }
 
-    }
     header{
-      height: 23rem;
+    background-color: white;
+    box-shadow: 0 2px 5px black;
+    padding: 1rem 0;
     }
+
+.h3_why--heading {
+    margin-left: 30rem;
+    margin-right: 30rem;
+    font-size: 2rem;
+}
+.h3_help {
+    margin-left: 25rem;
+    margin-right: 25rem;
+}
 
 .nav{
     display: flex;
     justify-content: space-around;
     flex-direction: column;
     align-items: center;
+    margin-bottom: 18rem;
 }
 .h3_why { 
-    margin-left: 9rem;
-    margin-right: 9rem;
+    margin-left: 8rem;
+    margin-right: 8rem;
+
 }
 .h3_help {
-    margin-right: 5rem;
-    margin-left: 5rem;
+    margin-right: 6rem;
+    margin-left: 6rem;
+    font-size: 2rem;
+}
+
+.donate_button {
+    background-color: orangered;
+    border-radius: 8px;
+    margin-top: 2rem;
+    margin-right: 0rem;
+    margin-left: 0rem;
+    padding: 2.5rem;
 }
 }
