--- a/style.css
+++ b/style.css
@@ -15,11 +15,11 @@ html{
     flex-direction: column;
     justify-content: space-between;
     min-height: 100vh;
-    background-color: #f5f5f5;
+    background-color: #f1ece5;
  }
  
  header{ 
-    background-color: white;
+    background-color: #545454;
     box-shadow: 0 2px 5px black;
     padding: 1rem 0;
 
@@ -71,13 +71,13 @@ li:hover a{
 
 
 .logo{
-    height: 4rem;
+    height: 7rem;
     width: auto;
     transition: transform 0.5s ease-in-out;
 }
 
 .logo:hover {
-    transform: scale(1.6) rotate(360deg);
+    transform: scale(1.3) rotate(360deg);
 }
 
 main{
@@ -169,7 +169,7 @@ h3{
 
 .grid-container:hover{
     transform: scale(1.05);
-    box-shadow: 1px 3px 7px 5px red;
+    box-shadow: 1px 3px 7px 5px #cbb2a1;
 }
 
 .grid-container1{
@@ -185,7 +185,7 @@ h3{
 
 .grid-container1:hover{
     transform: scale(1.05);
-    box-shadow: 1px 3px 7px 5px red;
+    box-shadow: 1px 3px 7px 5px #cbb2a1;
 }
 
 
@@ -237,7 +237,7 @@ footer{
     align-items: center;
     justify-content: center;
     height: 6rem;
-    background-color: #333;
+    background-color: #545454;
     margin-top: auto;
     
 }
