--- a/style.css
+++ b/style.css
@@ -15,11 +15,11 @@ html{
     flex-direction: column;
     justify-content: space-between;
     min-height: 100vh;
-    background-color: #f1ece5;
+    background-color: #e0f7fa;
  }
  
  header{ 
-    background-color: #545454;
+    background-color: white;
     box-shadow: 0 2px 5px black;
     padding: 1rem 0;
 
